# finance

./: .gitignore  CHANGELOG.md  Makefile  pyproject.toml
finance/: __init__.py
finance/config/: base_config.json  config.py  logging.py
finance/data/: eodhistoricaldata.py  yfinance_.py
finance/utils/: cache.py  file.py  requests_.py
notebooks/: 2022.05.13_experiment.ipynb
notebooks/yahoo_finance_cache/: 88d9fb108a04afc1.json  redirects.sqlite
